修改perm OOM单元测试用例